--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,100 @@
 @import url(https://fonts.googleapis.com/css?family=Nunito);@charset "UTF-8";
 
+body {
+  margin: 0;
+  font-family: "Nunito", sans-serif;
+  font-size: 0.9rem;
+  font-weight: 400;
+  line-height: 1.6;
+  color: #212529;
+  text-align: left;
+  background-color: #f8fafc;
+}
+
+#thumbnail {
+  max-width: 30px;
+  height: auto;
+}
+
+.wrapper > input {
+  display: none;
+}
+
+#cover-profile {
+  position: relative;
+  max-width: -webkit-fit-content;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+  height: 300px;
+}
+
+#profile_pic {
+  max-width: 100px;
+  width: 100px;
+  height: 100px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  position: absolute;
+  left: 30px;
+  top: 180px;
+  z-index: 1;
+}
+
+#profile_up {
+  max-width: 30px;
+  height: 30px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  position: relative;
+  left: 45px;
+  bottom: 27px;
+  z-index: 2;
+}
+
+#profile_img {
+  max-width: -webkit-fit-content;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+  height: 30px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  position: absolute;
+}
+
+#cover {
+  min-width: 100%;
+  max-width: 100%;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: 200px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+#cover_up {
+  max-width: 30px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: 30px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  position: relative;
+  left: 200px;
+  top: 100px;
+}
+
+#cover_img {
+  max-width: -webkit-fit-content;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+  height: 30px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  position: absolute;
+}
+
 /*!
  * Bootstrap v4.5.0 (https://getbootstrap.com/)
  * Copyright 2011-2020 The Bootstrap Authors
@@ -98,87 +193,6 @@ h6 {
 p {
   margin-top: 0;
   margin-bottom: 1rem;
-}
-
-#thumbnail {
-  max-width: 30px;
-  height: auto;
-}
-
-/* #pfp {
-  max-width: 100px;
-  width: 100px;
-  height: 100px;
-}
-
-#header {
-  min-width: 100%;
-  max-width: 100%;
-  width: fit-content;
-  height: 200px;
-} */
-
-.wrapper>input {
-  display: none;
-}
-
-#cover-profile {
-  position: relative;
-  max-width: fit-content;
-  height: 300px;
-}
-
-#profile_pic {
-  max-width: 100px;
-  width: 100px;
-  height: 100px;
-  object-fit: cover;
-  position: absolute;
-  left: 30px;
-  top: 180px;
-  z-index: 1;
-}
-
-#profile_up{
-  max-width: 30px;
-  height: 30px;
-  object-fit: cover;
-  position: relative;
-  left: 45px;
-  bottom: 27px;
-  z-index: 2;
-}
-
-#profile_img{
-  max-width: fit-content;
-  height: 30px;
-  object-fit: cover;
-  position: absolute;
-}
-
-#cover {
-  min-width: 100%;
-  max-width: 100%;
-  width: fit-content;
-  height: 200px;
-  object-fit: cover;
-}
-
-#cover_up {
-  max-width: 30px;
-  width: fit-content;
-  height: 30px;
-  object-fit: cover;
-  position: relative;
-  left: 200px;
-  top: 100px;
-}
-
-#cover_img {
-  max-width: fit-content;
-  height: 30px;
-  object-fit: cover;
-  position: absolute;
 }
 
 abbr[title],
@@ -4527,7 +4541,6 @@ input[type=button].btn-block {
 }
 
 .nav-link {
-  position: relative;
   display: block;
   padding: 0.5rem 1rem;
 }
