--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -17,3 +17,83 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+
+body {
+margin: 0;
+font-family: "Nunito", sans-serif;
+font-size: 0.9rem;
+font-weight: 400;
+line-height: 1.6;
+color: #212529;
+text-align: left;
+background-color: #f8fafc;
+}
+
+#thumbnail {
+max-width: 30px;
+height: auto;
+}
+
+
+.wrapper>input {
+display: none;
+}
+
+#cover-profile {
+position: relative;
+max-width: fit-content;
+height: 300px;
+}
+
+#profile_pic {
+max-width: 100px;
+width: 100px;
+height: 100px;
+object-fit: cover;
+position: absolute;
+left: 30px;
+top: 180px;
+z-index: 1;
+}
+
+#profile_up{
+max-width: 30px;
+height: 30px;
+object-fit: cover;
+position: relative;
+left: 45px;
+bottom: 27px;
+z-index: 2;
+}
+
+#profile_img{
+max-width: fit-content;
+height: 30px;
+object-fit: cover;
+position: absolute;
+}
+
+#cover {
+min-width: 100%;
+max-width: 100%;
+width: fit-content;
+height: 200px;
+object-fit: cover;
+}
+
+#cover_up {
+max-width: 30px;
+width: fit-content;
+height: 30px;
+object-fit: cover;
+position: relative;
+left: 200px;
+top: 100px;
+}
+
+#cover_img {
+max-width: fit-content;
+height: 30px;
+object-fit: cover;
+position: absolute;
+}
