bootstrap-vue + compose tweet modal

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11,6 +11,15 @@ body {
   background-color: #f8fafc;
 }
 
+img {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.tweet-container:hover {
+  background-color: #f2f4f4;
+}
+
 #thumbnail {
   max-width: 30px;
   height: auto;
