--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -260,3 +260,17 @@ position: absolute;
       }
   }
   
+
+  .navbar-icon {
+      width: 30px;
+      height: 30px;
+  }
+
+  .twitter-link {
+      color: black;
+  }
+
+  .twitter-link:hover {
+      color: #1DA1F2;
+      background-color: #eaf5ff;
+  }
